--- a/css/style.css
+++ b/css/style.css
@@ -1,62 +1,5 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+.task .fa-square-check {
+    font-size: 1.8em;
 
-.container {
-    max-width: 500px;
-    margin: 0 auto;
-
-    padding: 36px 0;
-}
-
-
-header {
-    display: flex;
-    flex-flow: column;
-    gap: 12px;
-}
-
-
-#carousel img {
-    width: 100%;
-}
-
-/* thumbnails */
-#thumbnails {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-
-    height: 100px;
-    width: 100%;
-}
-
-#thumbnails img {
-    width: auto;
-    height: 100%;
-    
-    opacity: .3;
-}
-
-#thumbnails img.active {
-    opacity: 1;
-}
-
-/* arrows */
-
-#arrows {
-    display: flex;
-    justify-content: space-between;
-    
-    padding: 24px 12px;
-
-    font-size: 2em;
-
-    
-}
-
-#arrows * {
     cursor: pointer;
 }
